# viennats-dev

./: .build-tools.cson  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSPRNG.cmake
docs/: ViennaTS_Doxygen_Doc.html  ViennaTS_documentation.html.html
docs/html/: HDF_8h.js  ModelBooleanOps_8h.html  ModelCalculateFlux_8h.html  ModelHBr__O2PlasmaEtching_8h.html  ModelMask_8h.html  ModelNonlinearDeposition_8h.html  ModelPlanarization_8h.html  ModelSF6__O2PlasmaEtching_8h.html  ModelSiO2__PlasmaEtching_8h.html  ModelSimpleDeposition_8h.html  ModelWetEtching_8h.html  PartitionDownLinkTreeNoBoxInfo_8h.html  PartitionNeighborLinksArrays_8h.html  PartitionUpDownLinkTree_8h.html  Partition_8h.js  Statistics_8h.html  Time_8h.html  Time_8h.js  annotated.html  boundaries_8h.html  boundaries_8h.js  calc_8h.html  calc_8h.js  classGridTraitsType.html  classGridTraitsType.js  classLevelSetTraitsType.html  classOutputInfoType.html  classOutputInfoType.js  classParameterDimType-members.html  classParameterDimType.html  classbnc_1_1boundary__conditions__type-members.html  classcalc_1_1Make3DVector-members.html  classcalc_1_1Make3DVector.html  classcalc_1_1Make3DVector.js  classcalc_1_1PartitionTraits.js  classcalc_1_1anonymous__namespace_02calc_8h_03_1_1ClusterPositionType-members.html  classcalc_1_1anonymous__namespace_02calc_8h_03_1_1ClusterPositionType.html  classcalc_1_1anonymous__namespace_02calc_8h_03_1_1ClusterPositionType.js  classes.html  classgeom_1_1cell-members.html  (+306 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  classes_1.js  classes_13.js  classes_2.js  classes_4.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_e.js  classes_f.js  defines_0.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_5.js  enumvalues_8.js  enumvalues_9.js  files_7.js  files_8.js  files_9.js  files_c.js  functions_1.js  functions_12.js  (+28 more)
docs/manual/: Makefile  README  ViennaTS  ViennaTS_User_Guide.odt  install.sh
docs/manual/html/: Cells_8h.html  Geometry_8h.html  Geometry_8h.js  HDF_8h.html  Math_8h.html  Math_8h.js  ModelBooleanOps_8h.html  ModelCFx__Deposition_8h.html  ModelCFx__Deposition_8h.js  ModelCalculateFlux_8h.html  ModelConstantRates_8h.html  ModelFIB_8h.html  ModelHBr__O2PlasmaEtching_8h.html  ModelMask_8h.html  ModelPlanarization_8h.html  ModelSF6__O2PlasmaEtching_8h.html  ModelSiO2__PlasmaEtching_8h.html  Parameters_8h.html  Parameters_8h.js  PartitionDownLinkTreeWithBoxInfo_8h.html  PartitionFullGrid_8h.html  Partition_8h.html  Process_8h.html  Process_8h.js  README_8md.html  Statistics_8h.js  annotated.html  annotated_dup.js  box_8hpp.html  calc_8h.html  classGridTraitsType-members.html  classLevelSetTraitsType-members.html  classLevelSetTraitsType.js  classOutputInfoType-members.html  classOutputInfoType.html  classParameterDimType.html  classParameterDimType.js  classbnc_1_1boundary__conditions__type.html  classbnc_1_1boundary__conditions__type.js  classcalc_1_1PartitionTraits-members.html  (+259 more)
examples/: README
examples/ALD/: parameters.txt  parameters.txt~
examples/ALD/output/: InterfaceInitial_1.dx  InterfaceInitial_1.vtk  Interface_1_0.vtk  StatisiticsPartition.cvs  StatisticsTimes.cvs
examples/ALD_TiN/: Checks.txt  geometry.dx  par.txt  par2.txt  par3.txt  par_test.txt
examples/ALD_TiN/output2/: Interface_0_1.vtk  Interface_0_100.vtk  Interface_0_101.vtk  Interface_0_102.vtk  Interface_0_103.vtk  Interface_0_104.vtk  Interface_0_105.vtk  (+470 more)
examples/ALD_TiN_trench/: 2D_trench.dx  3D_hole.csv  AR50.csv  AR50_space.csv  par.txt  par2.txt  par_3D.txt  par_sc.txt  par_test.txt
examples/ALD_TiO2/: MarchingCubesTimes.csv  par.txt  par_cycle.txt
examples/CFx_Deposition/: par.txt
examples/ConstantDeposition/: MarchingCubesTimes.csv  geometry2.dx  par.txt  par.txt~
examples/Deposition/: 2d_0_35_trench.dx  AirGap.dx  par.txt  parSA.txt
examples/DrLitho/: README  par_constant.txt  par_plasma.txt  run_ViennaTS_Constant.sh  run_ViennaTS_Plasma.sh
examples/FIB/: FIB_step.dx  par_burst.txt  par_step.txt
examples/SF6_CH2F2/: par.txt
examples/SF6_Etching/: par.txt  par3d.txt
examples/SiO2_Etching/: MarchingCubesTimes.csv  SiO2_3d_etch.dx  SiO2_etch.dx  geometry.dx  geometry.txt  par_2d.txt  par_2d.txt~  par_3d.txt  par_geometry.txt
examples/Simple/: HOLE_1250_50_red0.str  par_HOLE_1250_50_red0.str.txt
examples/TEOS_Deposition/: par.txt  parSA.txt
src/: CMakeLists.txt  viennats.cpp
tools/mask2wafer/: DrLithoVTK.cpp  DrLithoVTK.h  README  generate_LS  generate_VTK_files.sh  generate_wafer.sh  generate_wafer.txt  litho.cpp  mask2wafer  resist_profile  resist_profile.vtu  wafer_volume.vtk
viennats/: Cells.h  Geometry.h  Geometry.h~  HDF.h  Math.h  Parameters.h  Parameters_old.h  Process.h  Statistics.h  Time.h  boundaries.h  calc.h  diff.txt  message.h  parser_actors.h
viennats/LSlib/: box.hpp  config.hpp  file_io.hpp  grid.hpp  integration_schemes.hpp  kernel.hpp  kernel_alt.hpp  levelset.hpp  levelset2surface.hpp  levelset2volume.hpp  marching_cubes.hpp  math.hpp  misc.hpp  operations.hpp  output.hpp  surface2levelset.hpp  timeintegration.hpp  vector.hpp
viennats/Model/: ModelBCl3PlasmaEtching.h  ModelBooleanOps.h  ModelCFx_Deposition.h  ModelCalculateFlux.h  ModelCl2_CH4PlasmaEtching.h  ModelCl2_N2Etching.h  ModelConstantRates.h  ModelFIB.h  ModelHBr_O2PlasmaEtching.h  ModelHfO2_Deposition.h  ModelMask.h  ModelN2_Flash.h  ModelNonlinearDeposition.h  ModelPlanarization.h  ModelSF6_CH2F2PlasmaEtching.h  ModelSF6_O2PlasmaEtching.h  ModelSelectiveDeposition.h  ModelSelectiveEpitaxy.h  ModelSiO2_PlasmaEtching.h  ModelSimpleDeposition.h  ModelTiNAtomicLayerDeposition.h  ModelTiNPlasmaEnhancedAtomicLayerDeposition.h  ModelTiO2AtomicLayerDeposition.h  ModelTwoSpeciesDeposition.h  ModelWetEtching.h
viennats/Partition/: Partition.h  PartitionDownLinkTreeNoBoxInfo.h  PartitionDownLinkTreeWithBoxInfo.h  PartitionFullGrid.h  PartitionNeighborLinksArrays.h  PartitionUpDownLinkTree.h
(+2913 files in other folders)
